ambiente/cluster/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: mfe-spa
spec:
  selector:
    app: mfe-spa
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: mfe-logo
spec:
  selector:
    app: mfe-logo
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: mfe-rodape
spec:
  selector:
    app: mfe-rodape
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: mfe-mfe1
spec:
  selector:
    app: mfe-mfe1
  ports:
    - port: 80
      targetPort: 80
