ambiente/cluster/ingress.subdominio.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: subdominio
spec:
  rules:
    - host: blue.quasarbot.com
      http:
        paths:
          - backend:
              serviceName: blue-service
              servicePort: 80
    - host: green.quasarbot.com
      http:
        paths:
          - backend:
              serviceName: green-service
              servicePort: 80
